fixes broken css, adds bem plugin for stylelnt

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
 :root {
-  --primary-font: 'Inter', sans-serif
-  --secondary-font: 'Lexend Deca', sans-serif
-  --white: hsl(0deg 0% 100%)
-  --transparent-white-paragraph: hsla(0deg 0% 100% 75%)
-  --transparent-white-headings: hsla(0deg 0% 100% 75%)
-  --very-dark-blue: hsl(233deg 47% 7%)
-  --dark-desaturated-blue: hsl(244deg 38% 16%)
-  --soft-violet: hsl(277deg 64% 61%)
-  --mobile-bg-header: url('/src/images/image-header-mobile.jpg')
-  --desktop-bg-header: url('/src/images/image-header-desktop.jpg')
+  --primary-font: 'Inter', sans-serif;
+  --secondary-font: 'Lexend Deca', sans-serif;
+  --white: hsl(0deg 0% 100%);
+  --transparent-white-paragraph: hsla(0deg 0% 100% 75%);
+  --transparent-white-headings: hsla(0deg 0% 100% 75%);
+  --very-dark-blue: hsl(233deg 47% 7%);
+  --dark-desaturated-blue: hsl(244deg 38% 16%);
+  --soft-violet: hsl(277deg 64% 61%);
+  --mobile-bg-header: url('/src/images/image-header-mobile.jpg');
+  --desktop-bg-header: url('/src/images/image-header-desktop.jpg');
 }
 
 .container {
